# task

./: .gitignore  CMakeLists.txt  database.cpp  groupdialog.cpp  groupselectiondialog.cpp  icons.qrc  lessondialog.cpp  lessonvalidator.cpp  lessonvalidator.hpp  main.cpp  markdialog.cpp  marks.db  namevalidatior.cpp  namevalidatior.hpp  studentdialog.cpp  window.cpp  window.hpp
include/: database.hpp  groupdialog.hpp  groupselectiondialog.hpp  lessondialog.hpp  lessonvalidator.hpp  markdialog.hpp  studentdialog.hpp  window.hpp
src/: database.cpp  groupdialog.cpp  groupselectiondialog.cpp  lessondialog.cpp  lessonvalidator.cpp  main.cpp  markdialog.cpp  namevalidatior.cpp  studentdialog.cpp  window.cpp
